[package]
name = "peanutbutter"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1

[dependencies]
dashmap = "5.5.3"
indexmap = "2.2.5"
prost = "0.12.3"
quanta = "0.12.2"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"

[dev-dependencies]
divan = "0.1.14"
rand = { version = "0.8.5", features = ["small_rng"] }

[[bench]]
name = "service"
harness = false
