[package]
name = "peanutbutter"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1

[dependencies]
capnp = "0.19.3"
capnp-rpc = "0.19.0"
dashmap = "5.5.3"
futures = "0.3.30"
indexmap = "2.2.5"
prost = "0.12.3"
quanta = "0.12.2"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
tonic = "0.11.0"

[build-dependencies]
capnpc = "0.19.0"
tonic-build = "0.11.0"

[dev-dependencies]
divan = "0.1.14"
rand = { version = "0.8.5", features = ["small_rng"] }

[[bench]]
name = "service"
harness = false
