[package]
name = "peanutbutter"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1

[dependencies]
axum = "0.7.5"
dashmap = "5.5.3"
indexmap = "2.2.5"
quanta = "0.12.2"
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
divan = "0.1.14"
rand = { version = "0.8.5", features = ["small_rng"] }

[[bench]]
name = "service"
harness = false
